# banking_operation

./: README.md  conftest.py  pyproject.toml
docs/:  explanatory note  json template
src/: __init__.py  get_data.py  main.py  operations.py
tests/: test_get_data.py
