[tool.poetry]
name = "banking-operation"
version = "0.1.0"
description = "coursework_3"
authors = ["Alexey Melnikov <stariy.melnik07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
iniconfig = "^2.0.0"
packaging = "^24.1"
pluggy = "^1.5.0"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
